explanitory notes for third map, adjusting select element to prevent awkward zooming in Safari on iOS

--- a/css/template.css
+++ b/css/template.css
@@ -85,6 +85,10 @@ section:first-child{
         stroke-width: 0.7px;
     }
 
+    select {
+        font-size: 16px;
+    }
+
 @media screen and (min-aspect-ratio: 3/4) {
     section {
         height: 810px;
